--- a/statarena/matches/matches.html
+++ b/statarena/matches/matches.html
@@ -75,53 +75,7 @@
         <section class="matches-section">
             <h2 class="section-title">Live Matches</h2>
             <div id="live-matches-container">
-                <!-- Manchester City vs Arsenal -->
-                <div class="match-row">
-                    <span class="status-badge live-badge">LIVE</span>
-                    <div class="team-section">
-                        <span class="team-name">Manchester City</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg" alt="Manchester City" class="team-logo-small">
-                    </div>
-                    <div class="score-display">1-1</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="Arsenal" class="team-logo-small">
-                        <span class="team-name">Arsenal</span>
-                    </div>
-                    <span class="time-badge minute-badge">10'</span>
-                    <a href="match-details.html?id=1" class="btn-view-details">View Details</a>
-                </div>
-
-                <!-- Real Madrid vs Barcelona -->
-                <div class="match-row">
-                    <span class="status-badge live-badge">LIVE</span>
-                    <div class="team-section">
-                        <span class="team-name">Real Madrid</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/56/Real_Madrid_CF.svg" alt="Real Madrid" class="team-logo-small">
-                    </div>
-                    <div class="score-display">1-2</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg" alt="Barcelona" class="team-logo-small">
-                        <span class="team-name">Barcelona</span>
-                    </div>
-                    <span class="time-badge minute-badge">35'</span>
-                    <a href="match-details.html?id=2" class="btn-view-details">View Details</a>
-                </div>
-
-                <!-- AC Milan vs Inter Milan -->
-                <div class="match-row">
-                    <span class="status-badge live-badge">LIVE</span>
-                    <div class="team-section">
-                        <span class="team-name">AC Milan</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg" alt="AC Milan" class="team-logo-small">
-                    </div>
-                    <div class="score-display">2-2</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/FC_Internazionale_Milano_2021.svg" alt="Inter Milan" class="team-logo-small">
-                        <span class="team-name">Inter Milan</span>
-                    </div>
-                    <span class="time-badge minute-badge">64'</span>
-                    <a href="match-details.html?id=3" class="btn-view-details">View Details</a>
-                </div>
+                <!-- Live matches will be loaded dynamically from the database -->
             </div>
         </section>
 
@@ -129,43 +83,7 @@
         <section class="matches-section">
             <h2 class="section-title">Upcoming Matches</h2>
             <div id="upcoming-matches-container">
-                <!-- Manchester United vs Newcastle -->
-                <div class="match-row">
-                    <span class="status-badge upcoming-badge">21:30</span>
-                    <div class="team-section">
-                        <span class="team-name">Manchester United</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Manchester_United_FC_crest.svg" alt="Manchester United" class="team-logo-small">
-                    </div>
-                    <div class="time-display">21:30</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/56/Newcastle_United_Logo.svg" alt="Newcastle" class="team-logo-small">
-                        <span class="team-name">Newcastle</span>
-                    </div>
-                    <span class="status-badge upcoming-badge">Upcoming</span>
-                    <button class="btn-predict">
-                        <i class="fa-solid fa-chart-line"></i> Predict Score
-                    </button>
-                    <a href="match-details.html?id=4" class="btn-view-details">View Details</a>
-                </div>
-
-                <!-- Arsenal vs Tottenham -->
-                <div class="match-row">
-                    <span class="status-badge upcoming-badge">18:30</span>
-                    <div class="team-section">
-                        <span class="team-name">Arsenal</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="Arsenal" class="team-logo-small">
-                    </div>
-                    <div class="time-display">18:30</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/b/b4/Tottenham_Hotspur.svg" alt="Tottenham" class="team-logo-small">
-                        <span class="team-name">Tottenham</span>
-                    </div>
-                    <span class="status-badge upcoming-badge">Upcoming</span>
-                    <button class="btn-predict">
-                        <i class="fa-solid fa-chart-line"></i> Predict Score
-                    </button>
-                    <a href="match-details.html?id=5" class="btn-view-details">View Details</a>
-                </div>
+                <!-- Upcoming matches will be loaded dynamically -->
             </div>
         </section>
 
@@ -173,57 +91,12 @@
         <section class="matches-section">
             <h2 class="section-title">Recent Results</h2>
             <div id="finished-matches-container">
-                <!-- Brighton vs Leeds -->
-                <div class="match-row">
-                    <span class="status-badge ft-badge">FT</span>
-                    <div class="team-section">
-                        <span class="team-name">Brighton</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/f/fd/Brighton_%26_Hove_Albion_logo.svg" alt="Brighton" class="team-logo-small">
-                    </div>
-                    <div class="score-display">3-0</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/54/Leeds_United_F.C._logo.svg" alt="Leeds" class="team-logo-small">
-                        <span class="team-name">Leeds</span>
-                    </div>
-                    <span class="status-badge finished-badge">Finished</span>
-                    <a href="match-details.html?id=6" class="btn-view-details">View Details</a>
-                </div>
-
-                <!-- Burnley vs Arsenal -->
-                <div class="match-row">
-                    <span class="status-badge ft-badge">FT</span>
-                    <div class="team-section">
-                        <span class="team-name">Burnley</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/6/6d/Burnley_FC_Logo.svg" alt="Burnley" class="team-logo-small">
-                    </div>
-                    <div class="score-display">0-2</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="Arsenal" class="team-logo-small">
-                        <span class="team-name">Arsenal</span>
-                    </div>
-                    <span class="status-badge finished-badge">Finished</span>
-                    <a href="match-details.html?id=7" class="btn-view-details">View Details</a>
-                </div>
-
-                <!-- Crystal Palace vs Brentford -->
-                <div class="match-row">
-                    <span class="status-badge ft-badge">FT</span>
-                    <div class="team-section">
-                        <span class="team-name">Crystal Palace</span>
-                        <img src="https://upload.wikimedia.org/wikipedia/en/a/a2/Crystal_Palace_FC_logo_%282022%29.svg" alt="Crystal Palace" class="team-logo-small">
-                    </div>
-                    <div class="score-display">2-0</div>
-                    <div class="team-section">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/2/2a/Brentford_FC_crest.svg" alt="Brentford" class="team-logo-small">
-                        <span class="team-name">Brentford</span>
-                    </div>
-                    <span class="status-badge finished-badge">Finished</span>
-                    <a href="match-details.html?id=8" class="btn-view-details">View Details</a>
-                </div>
+                <!-- Finished matches will be loaded dynamically from the database -->
             </div>
         </section>
     </div>
 
     <script src="../assets/js/auth-check.js"></script>
+    <script src="matches.js"></script>
 </body>
 </html>
